--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ flutter:
    - assets/7minute.png
    - assets/beginerworkout.jpg
    - assets/15Minworkout.jpg
+   - assets/dia1.jpg
+   - assets/dia2.jpg
+   - assets/dia3.jpg
+   - assets/dia4.jpg
+   - assets/dia5.jpg
+   - assets/dia6.jpg
+   - assets/dia7.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
