--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ flutter:
    - assets/dia5.jpg
    - assets/dia6.jpg
    - assets/dia7.jpg
+   - assets/chol1.jpg
+   - assets/chol2.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
